Fix z-index

--- a/site/themes/eerj-blog-theme/static/css/main.css
+++ b/site/themes/eerj-blog-theme/static/css/main.css
@@ -123,7 +123,8 @@ code .MathJax {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%
+  width: 100%;
+  z-index: 2;
 }
 
 /*------------------------------------------- */
@@ -593,9 +594,8 @@ form {
     position: relative;
     /* overflow: hidden; */
     padding-top: 56.25%;
-    height: 1500px;
+    height: 1900px;
     margin: 0px -18px;
-    z-index: -1;
 }
 
 .resp-iframe {
